--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ contourpy==1.2.1
 cycler==0.12.1
 et-xmlfile==1.1.0
 fonttools==4.51.0
+Jinja2==3.1.4
 kiwisolver==1.4.5
+MarkupSafe==2.1.5
 matplotlib==3.8.4
 numpy==1.26.4
 openpyxl==3.1.2
